--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
   font-size: 15px;
   background: hsla(0,0%,100%,0.75);
+  height: 900px;
+}
+
+body{
+  height:100%;
 }
 
 h1{
@@ -22,10 +27,8 @@ button, .text-box{
 h1,
 svg,
 div, span{
-background: transparent;
+  background: transparent;
 }
-
-
 
 span{
   color: hsl(0,0%,100%,0.75)
@@ -33,8 +36,8 @@ span{
 
 .wrapper{
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
   padding: 5em;
   background: transparent;
 }
@@ -57,9 +60,9 @@ span{
 
 }
 .text-box{
-display: flex;
-align-items: flex-start;
-height: 40%; 
+  display: flex;
+  align-items: flex-start;
+  height: 40%; 
 }
 
 .text-box p{
@@ -70,7 +73,6 @@ height: 40%;
 
 .lineBreak{
   font-size:1.2em;
-
 }
 
 .lineBreak:after{
@@ -81,6 +83,10 @@ height: 40%;
 .btn-txt{
   background: transparent;
   font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .content:nth-child(1){
@@ -97,7 +103,7 @@ height: 40%;
 }
 
 .btn-txt.suv{
-color: hsl(184,100%,22%)
+  color: hsl(184,100%,22%)
 }
 
 .content:nth-child(3){
@@ -109,12 +115,80 @@ color: hsl(184,100%,22%)
   color: hsl(179,100%,13%)
 }
 
-
-button{
+.btn{
   background: hsla(0,0%,100%,0.95);
   border-radius: 50px;
   border: none;
-  width: 170px;
   height: 60px;
+  width: 200px;
   cursor: pointer;
+  transition: 300ms;
 }
+
+.btn:hover{
+  border: solid 2px white;
+  background: transparent;
+}
+
+.btn:hover .btn-txt{
+  color: white;
+}
+
+  @media screen and (max-width: 1600px){
+    *{
+      height: 1600px;
+    }
+
+    .wrapper{
+      padding: 5em;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    .mainBox{
+      flex-direction: column;
+      width:100%;
+      align-items: center;
+    }
+    
+    h1{
+      margin-bottom: 0.5em;
+
+    }
+    .content{
+      padding: 3em 2em 3em 3.5em;
+      width:70%;
+      height:80%; 
+    }
+
+    .content:nth-child(1){
+      border-radius: 10px 10px 0px 0;
+    }
+
+    .content:nth-child(3){
+      border-radius: 0 0 10px 10px;
+    }
+    .text-box{
+      margin-bottom: 2em ;
+    }
+
+    .lineBreak:after{
+    content:'';
+    }
+  }
+
+  @media screen and (max-width: 900px){
+  .wrapper{
+    padding:2em;
+  }
+  
+  .content{
+    width:100%;
+
+  }
+
+  .mainBox{
+    width: 100%;
+  }
+
+  }
