mobile ok again

--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ span{
 .wrapper{
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   padding: 5em;
   background: transparent;
 }
